<resources>
    <string name="app_name">Proyecto final</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="date">Date</string>
    <string name="task_name">Task Name:</string>
    <string name="priority">Priority</string>
    <string name="contribuidor">Contribuidor:</string>
    <string name="create_task">Create Task</string>
    <string name="insert_death_line">Insert Death Line</string>
    <string name="sample_task_name">Sample Task Name</string>
    <string name="id">*ID*</string>
    <string name="welcome">Welcome To Priority!</string>
    <string name="create_task_welcome">Create Task</string>
    <string name="create_member">Create Member</string>
    <string name="delete_member">Delete Member</string>
    <string name="delete_task">Delete Task</string>
    <string name="logo">Logo</string>
    <string name="member_name">Member name</string>
    <string name="member_group">Member group</string>
    <string name="member_id">Member id</string>
    <string name="create">Create</string>
    <string name="search">Search</string>
    <string name="search_name">Search by name</string>
    <string name="search_group">Search by group</string>
    <string name="search_id">Search by id</string>
    <string name="delete">Delete</string>
</resources>